[project]
name = "atlassian-tmp-bridge"
version = "0.1.0"
description = "Jira attachment download MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
]

[project.scripts]
atlassian-tmp-bridge = "atlassian_tmp_bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
