[project]
name = "atlassian-tmp-bridge"
version = "0.2.0"
description = "Jira Cloud MCP server — issues, comments, attachments, transitions, and bulk operations"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
]

[project.scripts]
serve = "atlassian_tmp_bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
